--- a/index.html
+++ b/index.html
@@ -5,7 +5,431 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe</title>
+        <meta name="keywords"
+        content="juice,wrld,tic,tac,toe,
+        java,tic,tac,toe,ai,
+        tic,tac,toe,javafx,
+        java,tic,tac,toe,classes,
+        tic,tac,toe,minimax,java,
+        juegos,de,tictactoe,
+        java,scalable,tic,tac,toe,
+        codepen,javascript,tic,tac,toe,
+        tictactoe,kotlin,
+        tic,tac,toe,keychain,
+        tictactoe,ki,
+        tic,tac,toe,kyper,
+        tic,tac,toe,keyboard,
+        tic,tac,toe,kindergarten,
+        tic,tac,toe,khan,academy,
+        tic,tac,toe,kotlin,android,studio,
+        tic,tac,toe,kmart,
+        tic,tac,toe,kodak,
+        khan,academy,tic,tac,toe,
+        tic,tac,toe,kotlin,
+        tic,tac,toe,game,for,kid,
+        k,significa,tic,tac,toe,
+        tictactoe,ki,java,
+        c#,tic,tac,toe,ki,
+        tic,tac,toe,kreis,
+        tic,tac,toe,kaas,
+        tic,tac,toe,leetcode,
+        tic,tac,toe,lyrics,
+        tictactoe,link,
+        tic,tac,toe,loser,crossword,clue,
+        tic,tac,toe,logic,
+        tic,tac,toe,like,games,
+        tic,tac,toe,lawn,game,
+        tic,tac,toe,loser,
+        tic,tac,toe,large,board,
+        tic,tac,toe,lines,
+        l,tic,tac,toe,
+        large,tic,tac,toe,
+        lisp,tic,tac,toe,
+        tic,tac,toe,logo,
+        tic,tac,toe,link,
+        tictactoe,prince,lyrics,
+        tictactoe,minimax,python,
+        tic,tac,toe,math,
+        tic,tac,toe,meme,
+        tic,tac,toe,method,
+        tic,tac,toe,math,playground,
+        tic,tac,toe,meaning,
+        tic,tac,toe,midwxst,
+        tic,tac,toe,machine,
+        tic,tac,toe,moves,
+        math,playground,tic,tac,toe,
+        tic,tac,toe,multiplayer,
+        tic,tac,toe,minimax,
+        math,games,tic,tac,toe,
+        mega,tic,tac,toe,
+        magnetic,tic,tac,toe,
+        mathisfun,tic,tac,toe,
+        maya,tictactoe,
+        minimax,algorithm,tic,tac,toe,
+        tic,tac,toe,nails,
+        tic,tac,toe,name,origin,
+        tic,tac,toe,nail,design,
+        tic,tac,toe,no,winner,
+        tic,tac,toe,never,lose,
+        tic,tac,toe,negative,and,positive,
+        tic,tac,toe,new,version,
+        tic,tac,toe,near,me,
+        tic,tac,toe,nesting,dolls,
+        tic,tac,toe,neural,network,
+        no,tic,tac,toe,
+        neon,tic,tac,toe,
+        tic,tac,toe,in,node,
+        negamax,tic,tac,toe,code,
+        npm,minimax,tic,tac,toe,
+        noughts,and,crosses,tic,tac,toe,
+        netbeans,tictactoe,
+        nom,tictactoe,
+        tic,tac,toe,npmjs,
+        newgrounds,tictactoe,
+        tic,tac,toe,online,
+        tic,tac,toe,online,multiplayer,
+        tic,tac,toe,outdoor,game,
+        tic,tac,toe,origin,
+        tic,tac,toe,on,forehead,
+        tic,tac,toe,online,unblocked,
+        tic,tac,toe,optimal,strategy,
+        tic,tac,toe,outline,
+        tic,tac,toe,on,phone,
+        tic,tac,toe,organ,shoes,
+        outdoor,tic,tac,toe,
+        openai,tic,tac,toe,
+        online,tic,tac,toe,maker
+        outcome,of,tic,tac,toe,
+        opencv,tic,tac,toe,
+        tic,tac,toe,object,oriented,design,
+        tic,tac,toe,rules,
+        tic,tac,toe,printable,
+        tictactoe,pdf,
+        tictactoe,poki,
+        tic,tac,toe,python,code,
+        tic,tac,toe,puzzle,
+        tic,tac,toe,png,
+        tic,tac,toe,pieces,
+        tic,tac,toe,play,
+        tic,tac,toe,pool,game,
+        tic,tac,toe,python,
+        pinkie,pie,tic,tac,toe,
+        pictures,of,tic,tac,toe,
+        tic,tac,toe,poki,
+        pls,tic,tac,toe,
+        playground,tic,tac,toe,
+        tic,tac,toe,pygame,
+        tic,tac,toe,ai,python,
+        tic,tac,toe,quotes,
+        tic,tac,toe,quilt,
+        tic,tac,toe,questions,and,answers,
+        tic,tac,toe,q,learning,
+        tic,tac,toe,quilt,pattern,
+        tic,tac,toe,question,game,
+        tic,tac,toe,quadratic,formula,
+        tic,tac,toe,questions,
+        tic,tac,toe,quality,accommodation,
+        tic,tac,toe,quilmes,
+        q,learning,tic,tac,toe,
+        quantum,tic,tac,toe,
+        que,es,tictactoe,
+        tictactoe,in,qt,
+        tictactoe,quilmes,
+        tic,tac,toe,in,qb64,
+        tic,tac,toe,deep,q,learning,
+        tic,tac,toe,using,q,learning,
+        tic,tac,toe,q,learning,github,
+        tic,tac,toe,view,qt,
+        tic,tac,toe,relay,
+        tic,tac,toe,robot,
+        tic,tac,toe,react,
+        tic,tac,toe,riddle,
+        tic,tac,toe,robot,meme,
+        tic,tac,toe,robot,cheats,
+        tic,tac,toe,russian,dolls,
+        tic,tac,toe,resin,mold,
+        tic,tac,toe,rocks,
+        r,tic,tac,toe,
+        reverse,tic,tac,toe,
+        rust,tic,tac,toe,
+        rare,tic,tac,toe,win,
+        roblox,tic,tac,toe,
+        room,recess,tic,tac,toe,
+        tic,tac,toe,reinforcement,learning,
+        re-frame,tic,tac,toe,
+        tic,tac,toe,strategy,
+        tictactoe,shoes,
+        tic,tac,toe,song,
+        tic,tac,toe,solver,
+        tic,tac,toe,solved,
+        tic,tac,toe,shot,game,
+        tic,tac,toe,svg,
+        tic,tac,toe,sheets,
+        tic,tac,toe,set,
+        tic,tac,toe,six,x,
+        super,tic,tac,toe,
+        strategic,tic,tac,toe,
+        soccer,tic,tac,toe,
+        s,tic,tac,toe,
+        scary,tic,tac,toe,
+        spell,tic,tac,toe,
+        sight,word,tic,tac,toe,
+        tic,tac,toe,strategies,
+        tic,tac,toe,scratch,
+        snapchat,tic,tac,toe,
+        tic,tac,toe,toilet,paper,holder,
+        tictactoe,tictactoe,
+        tic,tac,toe,two,player,
+        tictactoe,three,in,a,row,
+        tic,tac,toe,tricks,
+        tic,tac,toe,template,
+        tic,tac,toe,tattoo,
+        tic,tac,toe,text,
+        tic,tac,toe,toss,game,
+        tic,tac,toe,table,decor,
+        tactile,tic,tac,toe,
+        tic,tac,toy,tictactoe,boy,
+        toy,tictactoe,boy,
+        tic,tac,toe,tic,tac,toe,
+        tick-tock,tic,tac,toe,
+        tac,toy,tic,tac,toe,
+        tic,tac,toe,toy,
+        tic,tac,toe,two,player,game,
+        tac,toy,tictactoe,boy,
+        tictactoe,unblocked,
+        tictactoe,ultimate,
+        tic,tac,toe,unbeatable,strategy,
+        tic,tac,toe,urban,dictionary,
+        tic,tac,toe,unbeatable,
+        tic,tac,toe,unbeatable,ai,
+        tic,tac,toe,unity,
+        tic,tac,toe,using,html,javascript,and,css,
+        tic,tac,toe,ultimate,strategy,
+        tic,tac,toe,uk,
+        unspeakable,tic,tac,toe,
+        ultimate,tic,tac,toe,rules,
+        unbeatable,tic,tac,toe,
+        tic,tac,toe,unblocked,
+        usual,outcome,in,tic,tac,toe,
+        unspeakable,2.0,tic,tac,toe,
+        ultra,tictactoe,
+        unity,online,tic,tac,toe,
+        ultimate,tic,tac,toe,java,code,
+        tic,tac,toe,vs,computer,
+        tic,tac,toe,variations,
+        tic,tac,toe,vs,friend,
+        tic,tac,toe,video,game,
+        tic,tac,toe,vs,computer,hard,
+        tic,tac,toe,volleyball,drill,
+        tic,tac,toe,valorant,crosshair,
+        tic,tac,toe,vanilla,javascript,
+        tic,tac,toe,vs,chicken,
+        virtual,tic,tac,toe,
+        videos,of,tictactoe,
+        valentine's,day,tic,tac,toe,
+        tic,tac,toe,valentines,
+        vintage,wooden,tic,tac,toe,
+        variant,tic,tac,toe,
+        tic,tac,toe,vorlage,
+        tictactoe,videos,on,youtube,
+        tictactoe,with,a,friend,
+        tictactoe,website,
+        tic,tac,toe,wall,decor,
+        tic,tac,toe,with,friends,
+        tic,tac,toe,wooden,game,
+        tic,tac,toe,win,
+        tic,tac,toe,winner,
+        tic,tac,toe,with,6,x,
+        tic,tac,toe,with,cups,
+        tic,tac,toe,winner,crossword,clue,
+        who,invented,tic,tac,toe,
+        who,goes,first,in,tic,tac,toe,
+        ways,to,win,tic,tac,toe,
+        why,is,it,called,tic,tac,toe,
+        wooden,tic,tac,toe,
+        what,is,a,tie,called,in,tic,tac,toe,
+        winning,tic,tac,toe,row,
+        wargames,tic,tac,toe,
+        ways,to,play,tic,tac,toe,
+        tic,tac,toe,word,
+        tic,tac,toe,x,
+        tic,tac,toe,x,wall,game,
+        tic,tac,toe,x,and,o,
+        tic,tac,toe,x,challenge,
+        tic,tac,toe,xkcd,
+        tic,tac,toe,x,and,o,images,
+        tic,tac,toe,x,always,wins,
+        tic,tac,toe,x,image,
+        tic,tac,toe,x,v,o,
+        tic,tac,toe,xoxo,games,
+        xkcd,tic,tac,toe,
+        xo,tic,tac,toe,
+        xoxo,tic,tac,toe,
+        xox,tic,tac,toe,
+        tic,tac,toe,xml,
+        tic,tac,toe,xxl,
+        x,wing,turret,rules,
+        x,wing,2.0,turret,rules,
+        tictactoe,y8,
+        youtube,tic,tac,toe,
+        tictactoe,youtube,channel,
+        tic,tac,toe,yard,game,
+        tic,tac,toe,youth,group,game,
+        tic,tac,toe,yiv,
+        tic,tac,toe,youtube,age,
+        tic,tac,toe,youtube,toy,master,
+        tic,tac,toe,youtube,relay,
+        tic-tac-toe,yeah,
+        y8,tic,tac,toe,
+        yard,tic,tac,toe,
+        y,tic,tac,toe,
+        how,do,you,maya,tictactoe,
+        yb,tictactoe,
+        tic,tac,toe,bot,youtube,
+        tic,tac,toe,zoom,
+        tic,tac,toe,zero,sum,game,
+        tic,tac,toe,zespół,
+        tic,tac,toe,zone,
+        tic,tac,toe,z,gallerie,
+        tic,tac,toe,zomato,
+        znet,tic,tac,toe,
+        zoopals,tic,tac,toe,
+        tic,tac,toe,zu,zweit,
+        tic,tac,toe,zwickmühle,
+        z,gallerie,tic,tac,toe,
+        tic,tac,toe,co,z,nimi,
+        zeit,tic,tac,toe,
+        tictactoe,zuidas,
+        tic,tac,kalorie,
+        is,it,tic,for,tac,
+        what,is,the,saying,tic,for,tac,
+        why,are,tic,tacs,called,tic,tacs,
+        tic,tac,toe,0,png,
+        tic,tac,toe,0,players,
+        tic,tac,toe,0190,
+        scp,076,tic,tac,toe,
+        best,tic,tac,toe,
+        0,tic,tac,toe,
+        how,to,win,as,o,in,tic,tac,toe,
+        how,to.win,at,tic,tac,toe,
+        how,to,text,tic,tac,toe,
+        tic,tac,toe,1v1,
+        tic,tac,toe,100,humans,
+        tic,tac,toe,1v1,online,
+        tic,tac,toe,16,square,
+        tic,tac,toe,15,
+        tic,tac,toe,10x10,
+        tic,tac,toe,100,win,
+        tic,tac,toe,10x10,2,player,
+        tic,tac,toe,15,game,
+        tic,tac,toe,1v1,with,friends,
+        tic,tac,toe,part,1,codehs,
+        1-9,tic,tac,toe,15,
+        1,player,tic-tac-toe,python,beginner,
+        tic,tac,toe,o(1),
+        tic,tac,toe,1,person,
+        tic,tac,toe,2,1,
+        tic,tac,toe,1vs1,
+        tic,tac,toe,2,player,unblocked,
+        tic,tac,toe,20x20,
+        tic,tac,toe,2,player,link,
+        tic,tac,toe,2,players,online,
+        tic,tac,toe,2,player,free,
+        tic,tac,toe,2,player,app,
+        tic,tac,toe,2,multiplayer,
+        tic,tac,toe,2v2,
+        tic,tac,toe,2nd,player,
+        tic,tac,toe,2,player,games
+        2d,array,for,tic,tac,toe
+        how,old,is,addie,from,tictactoe,toy,2021,
+        how,old,is,addy,from,tictactoe,toy,2022,
+        tic,tac,toe,2012,
+        tictactoe,2,spieler,
+        tic,tac,toe,3,player,
+        tic,tac,toe,3d,
+        tic,tac,toe,3,in,a,row,song,
+        tic,tac,toe,3,in,a,row,
+        tic,tac,toe,3x3,
+        tic,tac,toe,3d,print,
+        tic,tac,toe,3,player,online,
+        tic,tac,toe,3,number,
+        tic,tac,toe,3,
+        3d,tic,tac,toe,
+        3,tic,tac,toe,
+        3d,tic,tac,toe,algorithm,
+        3d,tic,tac,toe,c++,
+        3d,drucker,tic,tac,toe,
+        tic,tac,toe,4,in,a,row,
+        tic,tac,toe,4x4,
+        tic,tac,toe,4,player,
+        tic,tac,toe,4x4,rules,
+        tic,tac,toe,4x4x4,
+        tic,tac,toe,4×4,
+        tic,tac,toe,4king,
+        tic,tac,toe,456,
+        tic,tac,toe,4x4,2,player,
+        4,tic,tac,toe,
+        4d,tic,tac,toe,
+        tic-tac-toe,2,3,4,player,
+        4,dimensional,tic,tac,toe,
+        pick34,tic,tac,toe,4,
+        4,square,tic,tac,toe,
+        4,person,tic,tac,toe
+        4,row,tic,tac,toe,
+        tic,tac,toe,5x5,
+        tic,tac,toe,5,in,a,row,
+        tic,tac,toe,5x5,rules,
+        tic,tac,toe,5x5,ai,
+        tic,tac,toe,555,222,
+        tic,tac,toe,5x5,python,
+        tic,tac,toe,5x5,c++,
+        tic,tac,toe,5x5,online,multiplayer,
+        tic,tac,toe#5863,
+        5,tic,tac,toe,
+        5,tic,tac,toe,strategy,
+        tic,tac,toe,5,row,
+        5,way,tic,tac,toe,
+        tic,tac,toe,5,santillana,
+        tic,tac,toe,for,grade,5,
+        tic,tac,toe,5,ô,
+        java,tic,tac,toe,5x5,
+        algorithm,tic,tac,toe,5x5,
+        tic,tac,toe,6,x,
+        tic,tac,toe,6x6,
+        tic,tac,toe,6,pieces,
+        tic,tac,toe,6,xs,no,win,
+        tic,tac,toe,6,by,6,
+        tic,tac,toe,6x6,online,
+        tic,tac,toe,6,kreuze,
+        tic,tac,toe,666,
+        tic-tac-toe,6d,
+        how,to,win,at,tic,tac,toe,impossible,
+        6,tic,tac,toe,
+        6,xs,tic,tac,toe,
+        6,coins,tic,tac,toe,
+        tic,tac,toe,mit,6,steinen,
+        tic,tac,toe,in,vb6,
+        tic,tac,toe,in,visual,basic,6,
+        tic,tac,toe,7x7,
+        tic,tac,toe,7x7,grid,
+        24/7,tic,tac,toe,
+        tic,tac,toe,for,windows,7,
+        tic,tac,toe,download,windows,7,
+        tic-tac-toe,en,7,lettres,
+        how,to,play,tic,tac,toe,with,words,
+        8,ways,to,win,tic-tac-toe,
+        tic,tac,toe,8,by,8,
+        tic,tac,toe-8086,
+        tic,tac,toe,80's,song,
+        8.11.4,tic,tac,toe,
+        8.2.8,tic,tac,toe,
+        8.1.7,tic,tac,toe,
+        8.2.9,finalizing,tic,tac,toe,
+        tic,tac,toe,song,80s,
+        tic,tac,toe,assembly,8086,
+        tic,tac,toe,angular,8,tic,tac,toe,game,88.2.8,tic,tac,toe,methods,tic,tac,toe,9x9,tic,tac,toe,9,boards,tic,tac,toe,90s,song 9.1.9,tic,tac,toe,9.11.4,tic,tac,toe,tic,tac,toe,90er,tic,tac,toe,9gag,best,tic,tac,toe,tricks9,square,tic,tac,toe"
+ 
+        <title>Tic Tac Toe | A game make to learn game logic and js</title>
 
     <link rel="shortcut icon" href="https://img.icons8.com/ios/50/000000/genshin-impact.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/style.css">
