--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
         8.2.9,finalizing,tic,tac,toe,
         tic,tac,toe,song,80s,
         tic,tac,toe,assembly,8086,
-        tic,tac,toe,angular,8,tic,tac,toe,game,88.2.8,tic,tac,toe,methods,tic,tac,toe,9x9,tic,tac,toe,9,boards,tic,tac,toe,90s,song 9.1.9,tic,tac,toe,9.11.4,tic,tac,toe,tic,tac,toe,90er,tic,tac,toe,9gag,best,tic,tac,toe,tricks9,square,tic,tac,toe"
+        tic,tac,toe,angular,8,tic,tac,toe,game,88.2.8,tic,tac,toe,methods,tic,tac,toe,9x9,tic,tac,toe,9,boards,tic,tac,toe,90s,song 9.1.9,tic,tac,toe,9.11.4,tic,tac,toe,tic,tac,toe,90er,tic,tac,toe,9gag,best,tic,tac,toe,tricks9,square,tic,tac,toe">
  
         <title>Tic Tac Toe | A game make to learn game logic and js</title>
 
