--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A simple trivia game designed to learn game logic and improve javascript skills, with a little understanding of semantic tags and SEO tags">
+    <meta name="author" content="chmod655">
         <meta name="keywords"
         content="juice,wrld,tic,tac,toe,
         java,tic,tac,toe,ai,
